[package]
authors = ['Cdot Network <hello@cdot.network>']
description = 'An IBC implementation on Substrate.'
edition = '2018'
homepage = 'https://cdot.network'
license = 'Apache-2.0'
name = 'pallet-ibc'
repository = 'https://github.com/cdot-network/substrate-ibc/'
version = '2.0.0-pre.1'
documentation = "https://docs.rs/pallet-ibc"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
sp-core = { default-features = false, version = '2.0.0' }
sp-finality-grandpa = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }
sp-std = { default-features = false, version = '2.0.0' }
sp-trie = { default-features = false, version = '2.0.0' }
sp-timestamp = { default-features = false, version = '2.0.0' }
ibc = { git = "https://github.com/livelybug/ibc-rs.git", features = ["mocks"] }
protobuf = "2.18.1"
bincode = "1.3.1"

[dev-dependencies]
hex = '0.4.0'
tokio = { version = "0.3", features = ["macros"] }
subtle-encoding = { version = "0.5" }
tendermint-testgen = { version = "0.17.0-rc2" } # Needed for generating (synthetic) light blocks.

[dependencies.finality-grandpa]
default-features = false
features = ['derive-codec']
version = '0.12.3'

[dependencies.hash-db]
default-features = false
version = '0.15.2'

[dependencies.serde]
default-features = false
optional = true
version = '1.0.101'

[dependencies.tendermint]
version = "=0.17.0-rc3"

[dependencies.tendermint-rpc]
version = "=0.17.0-rc3"
features = ["http-client", "websocket-client"]

[dependencies.tendermint-light-client]
version = "=0.17.0-rc3"

[dependencies.tendermint-proto]
version = "=0.17.0-rc3"

[dependencies.tendermint-testgen]
version = "0.17.0-rc2"
optional = true

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'finality-grandpa/std',
    'hash-db/std',
    'serde',
    'sp-core/std',
    'sp-finality-grandpa/std',
    'sp-runtime/std',
    'sp-std/std',
    'sp-trie/std',
]
